add ng-trim=false to text input

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "allmighty-autocomplete",
+  "name": "noppolp-allmighty-autocomplete",
   "version": "1.0.140706",
   "ignore": [],
-  "homepage": "http://justgoscha.github.io/allmighty-autocomplete/",
+  "homepage": "https://github.com/noppolp/allmighty-autocomplete",
   "authors": [
     "Goscha Graf <justgoscha@gmail.com>"
   ],
